src/Latte/ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Latte/ParLatte.y
-----------------------------------------------------------------------------

state 77 contains 1 shift/reduce conflicts.
state 156 contains 1 shift/reduce conflicts.

rule 45 is unused
rule 46 is unused
rule 47 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> 'class' Ident '{' ListClassAttr '}'      (6)
	ClassAttr -> Type Ident ';'                        (7)
	ListClassAttr ->                                   (8)
	ListClassAttr -> ClassAttr ListClassAttr           (9)
	ListTopDef -> TopDef                               (10)
	ListTopDef -> TopDef ListTopDef                    (11)
	Arg -> Type Ident                                  (12)
	ListArg ->                                         (13)
	ListArg -> Arg                                     (14)
	ListArg -> Arg ',' ListArg                         (15)
	Block -> '{' ListStmt '}'                          (16)
	ListStmt ->                                        (17)
	ListStmt -> Stmt ListStmt                          (18)
	Stmt -> ';'                                        (19)
	Stmt -> Block                                      (20)
	Stmt -> Type ListItem ';'                          (21)
	Stmt -> Expr6 '=' Expr ';'                         (22)
	Stmt -> Expr6 '++' ';'                             (23)
	Stmt -> Expr6 '--' ';'                             (24)
	Stmt -> 'return' Expr ';'                          (25)
	Stmt -> 'return' ';'                               (26)
	Stmt -> 'if' '(' Expr ')' Stmt                     (27)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (28)
	Stmt -> 'while' '(' Expr ')' Stmt                  (29)
	Stmt -> 'for' '(' Type Ident ':' Ident ')' Stmt    (30)
	Stmt -> Expr ';'                                   (31)
	Stmt -> 'printInt' '(' Expr ')' ';'                (32)
	Stmt -> 'printString' '(' Expr ')' ';'             (33)
	Stmt -> 'error' '(' ')' ';'                        (34)
	Item -> Ident                                      (35)
	Item -> Ident '=' Expr                             (36)
	ListItem -> Item                                   (37)
	ListItem -> Item ',' ListItem                      (38)
	Type -> 'int'                                      (39)
	Type -> 'string'                                   (40)
	Type -> 'boolean'                                  (41)
	Type -> 'void'                                     (42)
	Type -> Type '[]'                                  (43)
	Type -> Ident                                      (44)
	ListType ->                                        (45)
	ListType -> Type                                   (46)
	ListType -> Type ',' ListType                      (47)
	Expr6 -> Ident                                     (48)
	Expr6 -> 'null'                                    (49)
	Expr6 -> Expr6 '[' Expr ']'                        (50)
	Expr6 -> Integer                                   (51)
	Expr6 -> 'true'                                    (52)
	Expr6 -> 'false'                                   (53)
	Expr6 -> Ident '(' ListExpr ')'                    (54)
	Expr6 -> String                                    (55)
	Expr6 -> 'new' Type '[' Expr ']'                   (56)
	Expr6 -> 'new' Ident '[' Expr ']'                  (57)
	Expr6 -> 'new' Ident                               (58)
	Expr6 -> Expr6 '.' Ident                           (59)
	Expr6 -> '(' Expr ')'                              (60)
	Expr5 -> '-' Expr6                                 (61)
	Expr5 -> '!' Expr6                                 (62)
	Expr5 -> Expr6                                     (63)
	Expr4 -> Expr4 MulOp Expr5                         (64)
	Expr4 -> Expr5                                     (65)
	Expr3 -> Expr3 AddOp Expr4                         (66)
	Expr3 -> Expr4                                     (67)
	Expr2 -> Expr2 RelOp Expr3                         (68)
	Expr2 -> Expr3                                     (69)
	Expr1 -> Expr2 '&&' Expr1                          (70)
	Expr1 -> Expr2                                     (71)
	Expr -> Expr1 '||' Expr                            (72)
	Expr -> 'readInt' '(' ')'                          (73)
	Expr -> 'readString' '(' ')'                       (74)
	Expr -> Expr1                                      (75)
	ListExpr ->                                        (76)
	ListExpr -> Expr                                   (77)
	ListExpr -> Expr ',' ListExpr                      (78)
	AddOp -> '+'                                       (79)
	AddOp -> '-'                                       (80)
	MulOp -> '*'                                       (81)
	MulOp -> '/'                                       (82)
	MulOp -> '%'                                       (83)
	RelOp -> '<'                                       (84)
	RelOp -> '<='                                      (85)
	RelOp -> '>'                                       (86)
	RelOp -> '>='                                      (87)
	RelOp -> '=='                                      (88)
	RelOp -> '!='                                      (89)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'class'        { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'error'        { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'for'          { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'new'          { PT _ (TS _ 34) }
	'null'         { PT _ (TS _ 35) }
	'printInt'     { PT _ (TS _ 36) }
	'printString'  { PT _ (TS _ 37) }
	'readInt'      { PT _ (TS _ 38) }
	'readString'   { PT _ (TS _ 39) }
	'return'       { PT _ (TS _ 40) }
	'string'       { PT _ (TS _ 41) }
	'true'         { PT _ (TS _ 42) }
	'void'         { PT _ (TS _ 43) }
	'while'        { PT _ (TS _ 44) }
	'{'            { PT _ (TS _ 45) }
	'||'           { PT _ (TS _ 46) }
	'}'            { PT _ (TS _ 47) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	ClassAttr       rule  7
	ListClassAttr   rules 8, 9
	ListTopDef      rules 10, 11
	Arg             rule  12
	ListArg         rules 13, 14, 15
	Block           rule  16
	ListStmt        rules 17, 18
	Stmt            rules 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34
	Item            rules 35, 36
	ListItem        rules 37, 38
	Type            rules 39, 40, 41, 42, 43, 44
	ListType        rules 45, 46, 47
	Expr6           rules 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60
	Expr5           rules 61, 62, 63
	Expr4           rules 64, 65
	Expr3           rules 66, 67
	Expr2           rules 68, 69
	Expr1           rules 70, 71
	Expr            rules 72, 73, 74, 75
	ListExpr        rules 76, 77, 78
	AddOp           rules 79, 80
	MulOp           rules 81, 82, 83
	RelOp           rules 84, 85, 86, 87, 88, 89

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	Type           goto state 7

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 44)

	'[]'           reduce using rule 44
	L_Ident        reduce using rule 44


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 10)
	ListTopDef -> TopDef . ListTopDef                   (rule 11)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 10

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 16
	Type           goto state 7

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Type -> Type . '[]'                                 (rule 43)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 14

State 8

	Type -> 'boolean' .                                 (rule 41)

	'['            reduce using rule 41
	'[]'           reduce using rule 41
	L_Ident        reduce using rule 41


State 9

	TopDef -> 'class' . Ident '{' ListClassAttr '}'     (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 13

State 10

	Type -> 'int' .                                     (rule 39)

	'['            reduce using rule 39
	'[]'           reduce using rule 39
	L_Ident        reduce using rule 39


State 11

	Type -> 'string' .                                  (rule 40)

	'['            reduce using rule 40
	'[]'           reduce using rule 40
	L_Ident        reduce using rule 40


State 12

	Type -> 'void' .                                    (rule 42)

	'['            reduce using rule 42
	'[]'           reduce using rule 42
	L_Ident        reduce using rule 42


State 13

	TopDef -> 'class' Ident . '{' ListClassAttr '}'     (rule 6)

	'{'            shift, and enter state 18


State 14

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 17


State 15

	Type -> Type '[]' .                                 (rule 43)

	'['            reduce using rule 43
	'[]'           reduce using rule 43
	L_Ident        reduce using rule 43


State 16

	ListTopDef -> TopDef ListTopDef .                   (rule 11)

	%eof           reduce using rule 11


State 17

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 13
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 22
	ListArg        goto state 23
	Type           goto state 24

State 18

	TopDef -> 'class' Ident '{' . ListClassAttr '}'     (rule 6)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            reduce using rule 8
	L_Ident        shift, and enter state 2
